<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/action_home"
    android:title="@string/action_home"
    android:icon="@drawable/action_home"
    />

    <item android:id="@+id/action_order"
        android:title="@string/action_order"
        android:icon="@drawable/action_order"
        />

    <item android:id="@+id/action_store_location"
        android:title="@string/action_store_location"
        android:icon="@drawable/action_location"
        />
    <item android:id="@+id/action_accumulate_point"
        android:title="@string/action_accumulate_point"
        android:icon="@drawable/action_membership"
        />
    <item android:id="@+id/action_others"
        android:title="@string/action_others"
        android:icon="@drawable/action_others"
        />

</menu>