<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_search"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@+id/back_button"
                    android:background="@drawable/icon_round_backgound"
                    android:backgroundTint="@color/white_gray"
                    android:drawableLeft="@drawable/ic_baseline_search_24"
                    android:drawablePadding="20dp"
                    android:paddingBottom="2dp"
                    android:hint="@string/search"
                    android:paddingLeft="20dp" />

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:textOff="@string/map"
                    android:textOn="@string/list"
                    android:background="?android:attr/selectableItemBackground"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/ic_baseline_map_24"
                    android:padding="5dp"
                    android:text="@string/map"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold">

                </ToggleButton>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="360dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white_gray"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/othersstore"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/store_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp" />
        </LinearLayout>


    </LinearLayout>
</layout>