<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_marginTop="5dp"
                android:id="@+id/back_button"
                android:backgroundTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

            <EditText
                android:backgroundTint="@color/white_gray"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_button_background"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/back_button"
                android:id="@+id/text_search"
                android:layout_width="320dp"
                android:hint="@string/search"
                android:paddingLeft="20dp"
                android:drawablePadding="20dp"
                android:drawableLeft="@drawable/ic_baseline_search_24"
                android:layout_centerHorizontal="true"
                android:layout_height="40dp"/>







        </RelativeLayout>





    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_map"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_baseline_map_24"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon_map"
                android:layout_marginLeft="10dp"
                android:text="@string/choosemap"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_centerInParent="true"
                android:layout_marginTop="3dp"/>
            <ImageView
                android:id="@+id/icon_foward"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>




        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/savedaddress"
        android:layout_marginLeft="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="40dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/addhomeadress_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_home_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/addhomeaddress"
                android:layout_toRightOf="@+id/addhomeadress_icon"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_height="40dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/addcompanyadress_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_work_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/addcompanyaddress"
                android:layout_toRightOf="@+id/addcompanyadress_icon"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_height="40dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/addnewadress_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_add_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/addnewaddress"
                android:layout_toRightOf="@+id/addnewadress_icon"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>





</LinearLayout>